部分问题修复

--- a/themes/hexo-theme-xups/layout/_partial/post/comment.ejs
+++ b/themes/hexo-theme-xups/layout/_partial/post/comment.ejs
@@ -15,7 +15,7 @@
                     <div class="switch-item on" id="editSwitcher">编辑</div>
                     <div class="switch-item" id="previewSwitcher">预览</div>
                 </div>
-                <div class="button" onclick="JELON.Actions.postComment()">提交</div>
+                <div class="button" id="postComment">提交</div>
             </div>
         </section>
         <section class="tips clearfix" id="commentTips">注：评论支持 markdown 语法！</section>
