--- a/themes/hexo-theme-xups/layout/_custom/about.ejs
+++ b/themes/hexo-theme-xups/layout/_custom/about.ejs
@@ -1,5 +1,4 @@
 <!-- 自定义关于页 -->
-
 <p style="color: #444;">
     <span class="icon-cogs"></span>
     关于我
@@ -8,11 +7,11 @@
 <ul style="list-style-type: none;">
     <li>
         <span class="icon-profile"></span>
-        查看<a href="javascript: alert('更新中...');" target="_blank">个人介绍</a>
+        <a href="javascript: void(0)">个人介绍</a>
     </li>
     <li>
         <span class="icon-office"></span>
-        2014年7月，毕业于中南民族大学
+        2015年7月，毕业于武汉理工大学
     </li>
     <li>
         <span class="icon-newspaper"></span>
@@ -20,7 +19,7 @@
     </li>
     <li>
         <span class="icon-envelop"></span>
-        联系邮箱 jangdelong#qq.com（'#'改为'@'）
+        联系邮箱 yanlihui276@163.com
     </li>
 </ul>
 
@@ -32,15 +31,11 @@
 <ul style="list-style-type: none;">
     <li>
         <span class="icon-files-empty"></span>
-        博客采用<a href="https://hexo.io/">Hexo</a>静态博客系统、主题为个人开发主题<a href="https://github.com/jangdelong/hexo-theme-xups" target="_blank">Xups</a> (<a href="https://hexo.io/themes/" target="_blank">Hexo 官网</a>已收录)
+        博客采用<a href="https://hexo.io/">Hexo</a>静态博客系统、主题由<a href="https://github.com/jangdelong/hexo-theme-xups" target="_blank">hexo-theme-xups</a>感兴趣可以去看他源码
     </li>
     <li>
         <span class="icon-files-empty"></span>
-        博客内容主要是学习工作过程中的一些Web总结和日志琐事，除非特殊声明，博客内容皆为个人原创，转载烦请标注文章来源
-    </li>
-       <li>
-        <span class="icon-files-empty"></span>
-        为了提升博客的访问速度，博客的字体文件以及绝大部分图片采用了某 CDN 存储，代码托管采用 <a target="_blank" href="https://coding.net/">Coding</a>
+        博客内容用于记录一些生活琐事、web开发经验、python3学习总结等
     </li>
 </ul>
 
@@ -52,6 +47,6 @@
 <ul style="list-style-type: none;">
     <li>
         <span class="icon-github"></span>
-        <a href="https://github.com/jangdelong" target="_blank">我的Github</a>
+        <a href="https://github.com/sunnyShining" target="_blank">我的Github</a>
     </li>
 </ul>
