--- a/themes/hexo-theme-xups/layout/_partial/head.ejs
+++ b/themes/hexo-theme-xups/layout/_partial/head.ejs
@@ -34,4 +34,5 @@
     <link rel="shortcut icon" href="<%- url_for(theme.favicon) %>" >
     <% } %>
     <%- css('css/style') %>
+    <%- js('js/utils') %>
 </head>
