--- a/themes/hexo-theme-xups/source/css/_partial/post.styl
+++ b/themes/hexo-theme-xups/source/css/_partial/post.styl
@@ -60,6 +60,7 @@
     .post-excerpt
       position relative
       min-height 140px
+      margin-right 210px
       overflow hidden
     .post-thumbnail
       position absolute
