--- a/themes/hexo-theme-xups/layout/_custom/python3.ejs
+++ b/themes/hexo-theme-xups/layout/_custom/python3.ejs
@@ -1,7 +1,7 @@
-<!-- 自定义实验室页 -->
+<!-- 自定义学习python3页 -->
 
 <section>
-    <img title="图片摄于2017年1月1日深圳梧桐山 By iPhone 7。" src="<%- url_for('/img/lab/banner.jpg?v=3') %>" alt="Lab Banner" style="max-width: 100%;" alt="Banner" >
+    <img title="" src="<%- url_for('/img/python_logo.jpeg?v=4') %>" alt="python3 Banner" style="max-width: 100%;" alt="Banner" >
 </section>
 <%
     var projects = page.projects;
