--- a/themes/hexo-theme-xups/layout/_partial/archive-post.ejs
+++ b/themes/hexo-theme-xups/layout/_partial/archive-post.ejs
@@ -36,5 +36,21 @@
                 <a href="<%- url_for(post.permalink) %>">阅读剩下更多</a>
             </p>
         </div>
+        <div class="post-thumbnail" data-img="<%- post.photos[0] %>">
+            <a href="<%= post.permalink %>" title="<%= post.title %>">
+                <% if (post.thumbnail) { %>
+                    <!--
+                    <%- image_tag(post.thumbnail, { class: "thumbnail" }) %>
+                    -->
+                    <img class="thumbnail" src="<%- url_for('img/default.png') %>" data-echo="<%= post.thumbnail %>" alt="<%= post.title %>" >
+                <% } else if (post.photos.length) { %>
+                    <img class="thumbnail" src="<%- url_for('img/default.png') %>" data-echo="<%= url_for(post.photos[0]) %>" alt="<%= post.title %>" >
+                <% } else if (theme.CDN) { %>
+                    <img class="thumbnail" src="<%- url_for('img/default.png') %>" data-echo="<%- url_for(theme.CDN + 'thumbnail/' + date(post.date, 'YYYY-MM-DD').charAt(date(post.date, 'YYYY-MM-DD').length - 1)  + '.jpg') %>" alt="默认配图" >
+                <% } else  { %>
+                    <img class="thumbnail" src="<%- url_for('img/default.png') %>" data-echo="<%- url_for('img/thumbnail/' + date(post.date, 'YYYY-MM-DD').charAt(date(post.date, 'YYYY-MM-DD').length - 1)  + '.jpg') %>" alt="默认配图" >
+                <% } %>
+            </a>
+        </div>
     </div>
 </article>
