--- a/themes/hexo-theme-xups/layout/page.ejs
+++ b/themes/hexo-theme-xups/layout/page.ejs
@@ -6,8 +6,8 @@
     <div class="post-content">
         <% if (page.pageid && page.pageid == 'about') { %>
             <%- partial('_custom/about', { page: page, post: page }) %>
-        <% } else if (page.pageid && page.pageid == 'lab') { %>
-            <%- partial('_custom/lab', { page: page, post: page }) %>
+        <% } else if (page.pageid && page.pageid == 'python3') { %>
+            <%- partial('_custom/python3', { page: page, post: page }) %>
         <% } else if (page.pageid && page.pageid == 'comment') { %>
             <%- partial('_custom/comment', { page: page, post: page }) %>
         <% } else { %>
