--- a/themes/hexo-theme-xups/source/css/_partial/post.styl
+++ b/themes/hexo-theme-xups/source/css/_partial/post.styl
@@ -24,7 +24,7 @@
       padding 4px 7px
       top -3px
       color c-fff
-      background-color #ff5e52
+      background-color #33363b
       font-size 12px
       vertical-align baseline
       opacity .85
@@ -36,7 +36,7 @@
         width 0
         height 0
         content " "
-        border-left 4px solid #ff5e52
+        border-left 4px solid #33363b
         border-top 4px solid transparent
         border-bottom 4px solid transparent
     .post-title
