--- a/themes/hexo-theme-xups/source/css/_base/reset.styl
+++ b/themes/hexo-theme-xups/source/css/_base/reset.styl
@@ -21,6 +21,7 @@ body
   -webkit-text-size-adjust 100%
   -ms-text-size-adjust 100%
   text-rendering optimizelegibility
+  background: url(/img/miku.jpg) 50% center / cover no-repeat fixed rgb(255, 255, 255);
 a
   color c-666
   text-decoration none
