--- a/themes/sunny/layout/_custom/about.ejs
+++ b/themes/sunny/layout/_custom/about.ejs
@@ -31,7 +31,7 @@
 <ul style="list-style-type: none;">
     <li>
         <span class="icon-files-empty"></span>
-        博客采用<a href="https://hexo.io/">Hexo</a>静态博客系统、主题由<a href="https://github.com/jangdelong/hexo-theme-xups" target="_blank">hexo-theme-xups</a>感兴趣可以去看他源码
+        博客采用<a href="https://hexo.io/">Hexo</a>静态博客系统、主题由<a href="https://github.com/jangdelong/hexo-theme-xups" target="_blank">hexo-theme-xups</a>改写，感兴趣可以去看他源码
     </li>
     <li>
         <span class="icon-files-empty"></span>
