--- a/themes/sunny/layout/_custom/about.ejs
+++ b/themes/sunny/layout/_custom/about.ejs
@@ -1,52 +1,48 @@
 <!-- 自定义关于页 -->
-<p style="color: #444;">
-    <span class="icon-cogs"></span>
-    关于我
-</p>
-
+<p style="color: #444;"><span class="icon iconfont icon-cogs"></span>关于我</p>
 <ul style="list-style-type: none;">
     <li>
-        <span class="icon-profile"></span>
+        <span class="icon iconfont icon-profile"></span>
         <a href="javascript: void(0)">个人介绍</a>
     </li>
     <li>
-        <span class="icon-office"></span>
+        <span class="icon iconfont icon-office"></span>
         2015年7月，毕业于武汉理工大学
     </li>
     <li>
-        <span class="icon-newspaper"></span>
+        <span class="icon iconfont icon-newspaper"></span>
         现工作于深圳，任职前端开发
     </li>
     <li>
-        <span class="icon-envelop"></span>
+        <span class="icon iconfont icon-ccenvelope"></span>
         联系邮箱 yanlihui276@163.com
     </li>
 </ul>
 
 <p style="color: #444;">
-    <span class="icon-cogs"></span>
+    <span class="icon iconfont icon-cogs"></span>
     关于博客
 </p>
 
 <ul style="list-style-type: none;">
     <li>
-        <span class="icon-files-empty"></span>
+        <span class="icon iconfont icon-filesempty"></span>
         博客采用<a href="https://hexo.io/">Hexo</a>静态博客系统、主题由<a href="https://github.com/jangdelong/hexo-theme-xups" target="_blank">hexo-theme-xups</a>改写，感兴趣可以去看他源码
     </li>
     <li>
-        <span class="icon-files-empty"></span>
-        博客内容用于记录一些生活琐事、web开发经验、python3学习总结、面试经等
+        <span class="icon iconfont icon-filesempty"></span>
+        博客内容用于记录一些生活琐事、web开发经验、python3学习总结、面试经验等
     </li>
 </ul>
 
 <p style="color: #444;">
-    <span class="icon-cogs"></span>
+    <span class="icon iconfont icon-cogs"></span>
     Github账号
 </p>
 
 <ul style="list-style-type: none;">
     <li>
-        <span class="icon-github"></span>
+        <span class="icon iconfont icon-github"></span>
         <a href="https://github.com/sunnyShining" target="_blank">我的Github</a>
     </li>
 </ul>
