--- a/themes/sunny/layout/_partial/head.ejs
+++ b/themes/sunny/layout/_partial/head.ejs
@@ -24,6 +24,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" >
     <meta name="keywords" content="<%- theme.SEO.keywords %>" >
     <meta name="description" content="<%- theme.SEO.description %>" >
+    <meta name="referrer" content="no-referrer" />
 
     <% if (theme.rss) { %>
     <link rel="alternative" href="<%- theme.rss %>" title="<%= config.title %>" type="application/atom+xml" >
