--- a/themes/sunny/source/css/_partial/post.styl
+++ b/themes/sunny/source/css/_partial/post.styl
@@ -44,7 +44,7 @@
       font-size 20px
       font-weight normal
       a:hover
-        border-bottom 1px dotted #ff5e52
+        border-bottom 1px dotted #333
   .post-meta
     color #888
     font-size 12px
@@ -95,10 +95,12 @@
         transition all .3s ease-in-out
     @extend $base-style
     a
-      border-bottom 1px dotted #ff5e52
+      color #369
+      text-decoration underline
     .more a
       position absolute
       display inline-block
+      text-decoration none
       right 0
       bottom 0
       padding 3px 7px
