--- a/themes/sunny/layout/_custom/python3.ejs
+++ b/themes/sunny/layout/_custom/python3.ejs
@@ -1,7 +1,7 @@
 <!-- 自定义学习python3页 -->
 
 <section>
-    <img title="" src="<%- url_for('/img/python_logo.jpeg?v=4') %>" alt="python3 Banner" style="max-width: 100%;" alt="Banner" >
+    <img title="" src="<%- url_for('/img/python_logo.jpeg?v=4') %>" alt="python3 Banner" style="    max-width: 60%;margin: 0 auto;display: inherit;" alt="Banner" >
 </section>
 <%
     var projects = page.projects;
@@ -19,7 +19,7 @@
         <% var content = projects[i].content; %>
         <% for (var j in content) { %>
         <li>
-            <a href="<%- content[j].link %>" target="_blank" class="icon-lab fr" title="查看代码" style="color: #ff5e52; border-bottom: none; font-size: 16px; margin-top: 2.5px;"></a>
+            <a href="<%- content[j].link %>" target="_blank" class="icon iconfont icon-code fr" title="查看代码" style="color: #333; border-bottom: none; font-size: 16px;text-decoration: none;"></a>
             <span><%- content[j].name %></span>
         </li>
         <% } %>
