--- a/themes/sunny/source/css/_partial/post.styl
+++ b/themes/sunny/source/css/_partial/post.styl
@@ -96,7 +96,7 @@
     @extend $base-style
     a
       color #369
-      text-decoration underline
+      text-decoration none
     .more a
       position absolute
       display inline-block
