--- a/themes/hexo-theme-sunny/layout/_partial/baidu-analytics.ejs
+++ b/themes/hexo-theme-sunny/layout/_partial/baidu-analytics.ejs
@@ -1,11 +1,11 @@
 <% if (theme.baidu_analytics) { %>
     <script>
-        var _hmt = _hmt || [];
-        (function() {
-          var hm = document.createElement("script");
-          hm.src = 'https://hm.baidu.com/hm.js?6ddae1d3f760e394b62cc15eb4fcfcb2';
-          var s = document.getElementsByTagName("script")[0]; 
-          s.parentNode.insertBefore(hm, s);
-        })();
+		var _hmt = _hmt || [];
+		(function() {
+		  var hm = document.createElement("script");
+		  hm.src = "https://hm.baidu.com/hm.js?d125f138759db3cb063c66a0f298f768";
+		  var s = document.getElementsByTagName("script")[0];
+		  s.parentNode.insertBefore(hm, s);
+		})();
     </script>
 <% } %>
