deploy blog on master branch

--- a/themes/hexo-theme-sunny/layout/_partial/archive-post.ejs
+++ b/themes/hexo-theme-sunny/layout/_partial/archive-post.ejs
@@ -1,5 +1,5 @@
 <!-- 文章 -->
-<article class="post">
+<article class="post fadeInUp animated">
     <header>
         <!-- 标签这有且只能显示一个 -->
         <% if (post.categories && post.categories.length) { %>
