--- a/themes/hexo-theme-sunny/source/css/style.styl
+++ b/themes/hexo-theme-sunny/source/css/style.styl
@@ -19,6 +19,9 @@ $comment_config = hexo-config("comment.enable")
 //-----------------------------------------------
 @import "_base/global"
 
+// animate.css
+@import "_base/animate"
+
 // 头部样式
 //-----------------------------------------------
 @import "_partial/header"
