--- a/themes/hexo-theme-sunny/layout/layout.ejs
+++ b/themes/hexo-theme-sunny/layout/layout.ejs
@@ -17,5 +17,19 @@
     <%- partial('_partial/footer') %>
     <!--博客js脚本 -->
     <%- partial('_partial/after-footer') %>
+    <div class="snow-container"></div>
+    <style type="text/css">
+    .snow-container {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        pointer-events: none;
+        z-index: 9999;
+    }
+    </style>
+    <script type="text/javascript" src='//code.jquery.com/jquery-3.3.1.min.js'></script>
+    <%- js('js/snowy') %>
 </body>
 </html>
