--- a/themes/hexo-theme-sunny/layout/_partial/head.ejs
+++ b/themes/hexo-theme-sunny/layout/_partial/head.ejs
@@ -5,7 +5,7 @@
     <meta name="robots" content="index,follow" />
     <meta name="author" content="sunny" />
     <meta http-equiv="X-UA-Compatible" content="IE=11,IE=10,IE=9,IE=8" >
-    <meta name="baidu-site-verification" content="<%= config.baidu_site_verification %>" />
+    <meta name="baidu-site-verification" content="<%= theme.baidu_site_verification %>" />
     <%
     var title = page.title;
 
