deploy blog on master branch

--- a/themes/hexo-theme-sunny/layout/_partial/head.ejs
+++ b/themes/hexo-theme-sunny/layout/_partial/head.ejs
@@ -38,5 +38,6 @@
     <% } %>
     <%- css('css/style') %>
     <%- js('js/utils') %>
+    <%- js('js/seo') %>
     <%- partial('baidu-analytics') %>
 </head>
