--- a/themes/hexo-theme-sunny/layout/_partial/footer.ejs
+++ b/themes/hexo-theme-sunny/layout/_partial/footer.ejs
@@ -1,11 +1,11 @@
 <footer class="footer">
-    &copy;
+    &copy;CopyRight
     <% if (new Date().getFullYear() == 2018) { %>
         <%- new Date().getFullYear() %>
     <% } else { %>
         2018-<%- new Date().getFullYear() %>
     <% } %>
 
-    <a href="<%- url_for() %>">sunny Loves You</a>
+    <a href="<%- url_for() %>"> SUNNY的博客 | 粤ICP备18140638号-1 <img src="<%- url_for('img/beian.png') %>" style="vertical-align: middle;" /></a>
 </footer>
 <div class="back-to-top" id="backToTop" title="返回顶部">返回顶部</div>
