deploy blog on master branch

--- a/themes/hexo-theme-sunny/layout/_partial/footer.ejs
+++ b/themes/hexo-theme-sunny/layout/_partial/footer.ejs
@@ -6,6 +6,6 @@
         2018-<%- new Date().getFullYear() %>
     <% } %>
 
-    <a href="<%- url_for() %>"> SUNNY的博客 | 粤ICP备18140638号-1 <img src="<%- url_for('img/beian.png') %>" style="vertical-align: middle;" /></a>
+    <a> SUNNY的博客 | 粤ICP备18140638号-1 <img src="<%- url_for('img/beian.png') %>" style="vertical-align: middle;" /></a>
 </footer>
 <div class="back-to-top" id="backToTop" title="返回顶部">返回顶部</div>
